kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
  - hosts:
    - backend.remah.world
    - frontend.remah.world
    secretName: letsencrypt-nginx
  rules:
    - host: backend.remah.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-lb
                port:
                  number: 3001
    - host: frontend.remah.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-lb
                port:
                  number: 4000
  ingressClassName: nginx
